--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,11 @@ body {
     font-weight: lighter;
     color: #2a2a2a;
     background-color: #f0f0ff;
-
-    -webkit-appearance: none;
+    
+    -webkit-appearance: none;  
     -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-
+    -webkit-tap-highlight-color: rgba(0,0,0,0); 
+    
     -webkit-touch-callout: none; -webkit-user-select: none;
 }
 
@@ -17,13 +17,13 @@ h1 {
 
 button {
     margin: 15px;
-    -webkit-appearance:none;
+    -webkit-appearance:none;    
     font-size: 1.2em;
 }
 
-input[type=text] {
-    font-size: 0.6em;
-    width: 45%;
+/* TODO */
+input[type=range] {
+    width: 100%;
 }
 
 #mainPage {
@@ -46,16 +46,16 @@ input[type=text] {
 
 ul {
     list-style: none;
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px solid #d3d3d3;    
     text-align: left;
 }
 
 li {
     margin-left: -40px;
-    padding: 5px;
+    padding: 5px;        
     padding-top: 10px;
     min-height: 50px;
-    border-top: 1px solid #d3d3d3;
+    border-top: 1px solid #d3d3d3;    
     font-size: 0.9em;
 }
 
@@ -72,33 +72,6 @@ button {
     -webkit-border-radius: 6px;
     width: 100%;
     height: 140px;
-    text-align: left;
+    text-align: left;    
     overflow: auto;
-}
-
-#statusDiv {
-    text-align: center;
-    margin-top: 10px;
-}
-
-.fadein {
-  opacity: 1;
-  -webkit-transition: opacity 1s ease-in;
-}
-
-.fadeout {
-  opacity: 0;
-  -webkit-transition: opacity 1s ease-out;
-}
-
-/* iPhone 5s */
-@media screen and (device-aspect-ratio: 40/71) {
-    h1 {
-        font-size: 1.6em;
-        padding-top: 15px;
-    }
-
-    input[type=text] {
-        font-size: 0.5em;
-    }
 }
